# animal-scraper

./: .gitignore  README.md  pyproject.toml
animal_scraper/: html_generator.py  image_downloader.py  main.py  models.py  scraper.py
tests/: test_scraper.py
